--- a/cataloguesystem.css
+++ b/cataloguesystem.css
@@ -2,6 +2,10 @@
     * 1001238476
     */
 
+/* 
+ * Global Font is based on priority of below
+ * Global Background color is light yellow
+*/
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: lightyellow;
